# GLTest

./: CMakeLists.txt  GLTest.code-workspace  main.c
headers/: env.h  game.h  gl_error.h
headers/graphics/: renderer.h
headers/resources/: resourcemanager.h
headers/resources/shaders/: shader.h
headers/resources/textures/: texture.h
headers/window/: window.h
inc/glad/: glad.h
lib/: cglm.lib
sources/: game.c
sources/graphics/: renderer.c
sources/resources/: resourcemanager.c
sources/resources/shaders/: shader.c
sources/resources/textures/: texture.c
sources/window/: window.c
